--- a/.github/workflows/packages-security-audit.yml
+++ b/.github/workflows/packages-security-audit.yml
@@ -1,4 +1,4 @@
-name: Packages Security Audit
+name: Dependency Vulnerability Audit
 
 on:
   workflow_dispatch:
@@ -6,28 +6,21 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  audit:
+  yarn-audit:
     runs-on: ubuntu-latest
 
     permissions:
       contents: write
       pull-requests: write
 
-    env:
-      GITHUB_OAUTH_TOKEN: ${{ secrets.OAUTH_GITHUB_TOKEN }}
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Create .npmrc for GitHub Packages
-        run: |
-          echo "@epayco:registry=https://npm.pkg.github.com/" > .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${GITHUB_OAUTH_TOKEN}" >> .npmrc
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          cache: 'yarn'
 
       - name: Install dependencies with Yarn
         run: yarn install --frozen-lockfile
